--- a/FinalProject/group9/src/routes/GDP.css
+++ b/FinalProject/group9/src/routes/GDP.css
@@ -53,13 +53,6 @@
   margin-right: 200px;
 } 
 
-h2 {
-  color:#32353a;
-  font-family: 'Helvetica Neue, Arial';
-  font-size:xx-large;
-  color: rgb(49, 54, 59); /* text color */
-}
-
 h4 {
   color: rgb(97, 99, 100); /* text color */
   font-family:Arial, Helvetica, sans-serif;
@@ -67,18 +60,21 @@ h4 {
 
 body {
   background-color: rgba(228,233,239,255);
-  color:rgb(248, 248, 248); /* text color */
 }
 
-#tooltip{
+
+#tooltip2{
   background-color: rgba(228,233,239,255);
   color:rgb(46, 44, 54); /* text color */
+  margin-bottom: 10px;
 }
 
 #container{
   background-color:rgb(49, 54, 59);
+  color:rgb(255, 255, 255); /* text color */
 }
 
 #slider{
   color:rgb(28, 69, 97); /* text color */
+  margin-bottom: 10px;
 }
