--- a/FinalProject/react-template/react-d3/src/Geo.css
+++ b/FinalProject/react-template/react-d3/src/Geo.css
@@ -54,6 +54,19 @@
     margin-top: 10%;
     padding: 5% 5% 5% 5%;
 }
+.legend_container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width:100%;
+    height: 100%;
+    flex-direction: row;
+    margin-top: 10%;
+}
+.legend_container .legend{
+    width:100%;
+    height: 100%;
+}
 
 
 .geoPageLayout .GMcontainer .controlPanel select{
