--- a/FinalProject/react-template/react-d3/src/Stat_view.css
+++ b/FinalProject/react-template/react-d3/src/Stat_view.css
@@ -95,6 +95,29 @@
 
 }
 
+.GeoSKYPageLayout .SKYcontainer .controlPanel{
+    display:flex;
+    flex-basis: 25%;
+    height: 95%;
+    background-color: white;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: column;
+}
+
+.PCSKYPageLayout .SKYcontainer .controlPanel{
+    display:flex;
+    flex-basis: 25%;
+    height: 95%;
+    background-color: white;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: column;
+    border: 1px solid black;
+}
+
 /* .GeoSKYPageLayout .SKYcontainer .controlPanel{
     display:flex;
     flex-basis: 25%;
@@ -139,3 +162,22 @@ input[type="range"]{
 
 } */
 
+.stat_view_home {
+    background-color:white;
+    border: black;
+    border-radius: 1px;
+    border-style: solid;
+    color: black;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    height: 5vh;
+    width: 10vw;
+    position: absolute;
+    top:2vh;
+    right: 2vw;
+  }
