--- a/FinalProject/react-template/react-d3/src/ParallelCoordinate.css
+++ b/FinalProject/react-template/react-d3/src/ParallelCoordinate.css
@@ -34,5 +34,26 @@
     border: black;
     border-radius: 1px;
     border-style: solid;
+    align-items: center;
+    justify-content: center;
 }
 
+.google_map_home {
+    background-color:white;
+    border: black;
+    border-radius: 1px;
+    border-style: solid;
+    color: black;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    height: 5vh;
+    width: 10vw;
+    position: absolute;
+    top:2vh;
+    right: 2vw;
+  }
