--- a/FinalProject/znwu/src/App.css
+++ b/FinalProject/znwu/src/App.css
@@ -47,10 +47,96 @@
   font-size: 10px;
 }
 
-header .ant-typography{
+header .ant-typography {
   color: white;
 }
 
 header > h5.ant-typography {
   color: white;
+}
+
+.each-fade {
+  background-color: rgb(216, 238, 255);
+  height: 100vh;
+  width: 100vw;
+  margin: 0;
+  padding: 0;
+}
+
+.each-fade > h2 {
+  /* position: absolute;
+  top: 40vh;
+  left: 50vw;
+  text-anchor: middle;
+  transform: translate(-50%, -50%); */
+  padding-top: 10vh;
+  text-align: center;
+  font-size: 50px;
+}
+
+.each-fade table {
+  margin-left: auto;
+  margin-right: auto;
+  width: 80%;
+  border-collapse: separate;
+  border-spacing: 50px 0;
+}
+
+.each-fade td {
+  width: 33%;
+  text-align: center;
+  vertical-align: middle;
+}
+
+.each-fade td img {
+  object-fit: cover;
+  width: 200px;
+  height: 200px;
+}
+
+.each-fade .foodtype table td img {
+  object-fit: contain;
+  width: 50px;
+  height: 50px
+}
+
+h1 {
+  font-family: Raleway;
+  font-size: 24px;
+  font-style: normal;
+  font-variant: normal;
+  font-weight: 700;
+  line-height: 26.4px;
+}
+h3 {
+  font-family: Raleway;
+  font-size: 14px;
+  font-style: normal;
+  font-variant: normal;
+  font-weight: 700;
+  line-height: 15.4px;
+}
+p {
+  font-family: Raleway;
+  font-size: 14px;
+  font-style: normal;
+  font-variant: normal;
+  font-weight: 400;
+  line-height: 20px;
+}
+blockquote {
+  font-family: Raleway;
+  font-size: 21px;
+  font-style: normal;
+  font-variant: normal;
+  font-weight: 400;
+  line-height: 30px;
+}
+pre {
+  font-family: Raleway;
+  font-size: 13px;
+  font-style: normal;
+  font-variant: normal;
+  font-weight: 400;
+  line-height: 18.5714px;
 }
