--- a/FinalProject/znwu/src/App.css
+++ b/FinalProject/znwu/src/App.css
@@ -97,7 +97,14 @@ header > h5.ant-typography {
 .each-fade .foodtype table td img {
   object-fit: contain;
   width: 50px;
-  height: 50px
+  height: 50px;
+}
+
+.source {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  font-size: 10px;
 }
 
 h1 {
